# tobii-client-server

./: README.md  pyproject.toml
scripts/: run_client.py  run_server.py
src/gaze/: gaze_client.py  gaze_point.py  gaze_server.py  gaze_visualizer.py
src/tobii_client_server/gaze/: gaze_client.py  gaze_visualizer.py
src/tobii_client_server/scripts/: run_client.py  run_server.py
src/tobii_client_server/tobii/: tobii_eye_tracker.py
