[project]
name = "tobiiclientserver"
version = "0.1.0"
description = "Client/server set-up for Tobii Pro Nano gaze data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.6", "pygame>=2.6.1"]

[project.optional-dependencies]
server = ["tobii-research>=2.1.0"]

[dependency-groups]
dev = []
